<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.softulp.inmobiliaria.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.softulp.inmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil">

        <!-- Acción desde Perfil hacia Cambiar Contraseña -->
        <action
            android:id="@+id/action_nav_perfil_to_nav_contrasenia"
            app:destination="@id/nav_contrasena" />
    </fragment>

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.softulp.inmobiliaria.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" />

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.softulp.inmobiliaria.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" />

    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.softulp.inmobiliaria.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" />

    <!-- NUEVO DESTINO: Cambiar contraseña -->
    <fragment
        android:id="@+id/nav_contrasena"
        android:name="com.softulp.inmobiliaria.ui.perfil.ContraseniaFragment"
        android:label="Cambiar contraseña"
        tools:layout="@layout/fragment_contrasenia" />

</navigation>
